--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ loader_version_range=[47,)
 # | official  | MCVersion            | Official field/method names from Mojang mapping files                          |
 # | parchment | YYYY.MM.DD-MCVersion | Open community-sourced parameter names and javadocs layered on top of official |
 #
-# You must be aware of the Mojang license when using the 'official' or 'parchment' mappings.
+# You must be aware of the Mojang licence when using the 'official' or 'parchment' mappings.
 # See more information here: https://github.com/MinecraftForge/MCPConfig/blob/master/Mojang.md
 #
 # Parchment is an unofficial project maintained by ParchmentMC, separate from Minecraft Forge.
@@ -35,10 +35,10 @@ mapping_version=1.20.1
 mod_id=wiiu_lib
 # The human-readable display name for the mod.
 mod_name=WiiU Lib
-# The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
+# The licence of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
-mod_version=1.6.1
+mod_version=1.6.2
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
